IGN-5165 Update Ignite version and groupId to the Ignite SE style
(cherry picked from commit 23af1521ade4f339ae96fb1f34db330ff35029fe)